updated uml (team score)

--- a/RASD/Files/overview.tex
+++ b/RASD/Files/overview.tex
@@ -20,6 +20,7 @@
 \textbf{ Additional notes on the class diagram:}
 \begin{itemize}
     \item the "proofDocument" attribute of the "Educator" class contains a reference to the file through which the educator was verified.
+    \item the "teamScore" attribute of the Team entity contains the score of the latest submission, computed combining all the submission's specific scores. This is the score that is used to compute the rank of teams participating in the battle.
 \end{itemize}
 
 \subsubsection{State diagrams}
